# ntdll-sys

./: Cargo.toml  README.md  build.rs
examples/: query_handles.rs
src/: wrapper.h
src/include/ndk/: iotypes.h  rtltypes.h
